<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profileFragment.SettingFragment">


    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="86dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_mode"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/language"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:hint="@string/change_language"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/language"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_mode"
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:text="@string/dark_mode"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="39dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="34dp"
        android:layout_height="41dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/dark_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>