<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".postFragment.PostFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/new_post"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="261dp"
            android:layout_height="82dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="75dp"
            android:hint="@string/enter_your_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/post_camera"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/post_write"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:singleLine="false" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/post_photo"
            android:layout_width="111dp"
            android:layout_height="117dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayoutDescription"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_camera"
            android:layout_width="72dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-20dp"
            android:src="@android:drawable/ic_menu_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_photo"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPlaceName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="225dp"
            android:layout_height="57dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:hint="@string/enter_the_place_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_post"
            tools:ignore="TouchTargetSizeCheck">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_post"
            android:layout_width="68dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/save_post"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/location_post"
            android:layout_width="59dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/location_100px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_picker_IV" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="36dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/location_post"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/click_map"
            android:layout_width="265dp"
            android:layout_height="37dp"
            android:layout_marginBottom="20dp"
            android:text="@string/click_to_open_the_map"
            android:textColor="#9A9595"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutPlaceName"
            app:layout_constraintStart_toEndOf="@+id/textView8" />

        <ImageView
            android:id="@+id/date_picker_IV"
            android:layout_width="49dp"
            android:layout_height="44dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/timeline_week_100px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_camera" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/date_picker_IV"
            app:layout_constraintTop_toBottomOf="@+id/post_camera" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPlaceName">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".postFragment.PostFragment"
                tools:layout="@layout/fragment_maps" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="256dp"
            android:layout_height="57dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/enter_your_post_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/post_photo"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:singleLine="false"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/update_button"
            android:layout_width="83dp"
            android:layout_height="37dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/update_btn"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/add_post"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
